--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -27,7 +27,8 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
     @*<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />*@
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="~/Dashboard/assets/css/all.css" rel="stylesheet" />
+    @*<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> URL COMMENT By Absar*@
     <!-- CSS Files -->
     @*<link href="../assets/css/bootstrap.min.css" rel="stylesheet" />*@
     <link href="~/Dashboard/assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -109,6 +110,7 @@
                         <ul>
                             <li><a asp-area="admin" asp-controller="student" asp-action="addStudent">Add Student</a></li>
                             <li><a asp-area="admin" asp-controller="student" asp-action="index">Student List</a></li>
+                            <li><a asp-area="admin" asp-controller="student" asp-action="studentClassDetail">Student Class</a></li>
 
 
                         </ul>
