--- a/LMS/Areas/Admin/Views/Student/StudentClassDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Student/StudentClassDetail.cshtml
@@ -1,6 +1,7 @@
-﻿@model LMS.Domain.ViewModels.StudentClassViewModel
+﻿@model IEnumerable<LMS.Domain.ViewModels.StudentClassViewModel>
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "StudentClassDetail";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -16,7 +17,7 @@
                         <span class="navbar-toggler-bar bar3"></span>
                     </button>
                 </div>
-                <a class="navbar-brand" href="#pablo">Students Info</a>
+                <a class="navbar-brand" href="#pablo">Class Subject Info</a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -82,62 +83,60 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Manage <b>Students</b></h2>
+                                            <h2>Assign Subject To Particular <b>Class & Section</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
-                                            <a a asp-area="admin" asp-controller="student" asp-action="addStudent" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Student</span></a>
-                                            @*<a href="#deleteStudentModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>*@
+                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                            <a href="#deleteStudentClassModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
                                         </div>
                                     </div>
                                 </div>
 
-                                <table id="studentpage" class="display" style="width:100%">
+                                <table id="StudentClassPage" class="display" style="width:100%">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Father Name</th>
-                                            <th>Email</th>
-                                            <th>Mobile Number</th>
-                                            <th>City</th>
-                                            <th>Country</th>
-                                            <th>Enrolment</th>
+                                            <th>Student ID</th>
+                                            <th>Student Name</th>
+                                            <th>Class Name</th>
+                                            <th>Section Name</th>
+                                            <th>Enroll Subjects</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var item in Model.Students)
+                                        @foreach (var item in Model)
                                         {
                                             <tr>
+                                                <td>@item.StudentClass_Id</td>
                                                 <td>@item.Student_Id</td>
                                                 <td>@item.Student_Name</td>
-                                                <td>@item.Student_FatherName</td>
-                                                <td>@item.Student_Email</td>
-                                                <td>@item.Student_MobNumber</td>
-                                                <td>@item.Student_City</td>
-                                                <td>@item.Student_Country</td>
+                                                <td>@item.Class_Name</td>
+                                                <td>@item.Section_Name</td>
                                                 <td>
-                                                    <a href="#assignStudentClassModal" class="assignClass" id="assignClass" data-toggle="modal">
-                                                        <i class="btn btn-primary" data-toggle="tooltip" title="" data-original-title="AssignClass" style="line-height: 1em; border-radius: 2em;">Assign Class</i>
+                                                    <a asp-area="admin" asp-controller="student" asp-action="studentSubjectDetail" asp-route-id="@item.Student_Id" class="studentSubject" id="studentSubject">
+                                                        <i class="btn btn-primary" data-toggle="tooltip" title="" data-original-title="AssignClass" style="line-height: 1em; border-radius: 2em;">Courses</i>
                                                     </a>
 
                                                     @*Added BY Absar To get parentid*@
-                                                    <input type="hidden" class="Student_Id" value="@item.Student_Id" />
+                                                    @*<input type="hidden" class="Student_Id" value="@item.Student_Id" />*@
 
                                                 </td>
                                                 <td>
-
-
-                                                    <a asp-area="admin" asp-controller="student" asp-action="editStudent" asp-route-id="@item.Student_Id" class="edit" id="edit">
-                                                        <i class="material-icons" title="" data-original-title="Edit"></i>
+                                                    <a href="#editStudentClassModel" class="edit" id="edit" data-toggle="modal">
+                                                        <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
                                                     </a>
 
-                                                    <a href="#deleteStudentModal" class="delete" id="delete" data-toggle="modal">
+                                                    <a href="#deleteStudentClassModal" class="delete" id="delete" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
                                                     </a>
 
+
+
                                                     @*Added BY Absar To get parentid*@
+                                                    <input type="hidden" class="StudentClass_Id" value="@item.StudentClass_Id" />
                                                     <input type="hidden" class="Student_Id" value="@item.Student_Id" />
+
 
                                                 </td>
                                             </tr>
@@ -150,40 +149,52 @@
                             </div>
                         </div>
 
+
+
+
+
                         <!-- Edit Modal HTML -->
-                        <div id="assignStudentClassModal" class="modal fade">
+                        <div id="editStudentClassModel" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="student" asp-action="studentClass">
+                                    <form method="post" asp-controller="student" asp-action="editStudentClass">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">Add Student Class</h4>
+                                            <h4 class="modal-title">Edit Student Class</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
                                             <div class="form-group">
                                                 <label>ID</label>
-                                                <input type="text" class="form-control" required="" id="Student_Id" disabled="disabled" >
+                                                <input type="text" class="form-control" required="" id="StudentClass_Id" disabled="disabled">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Student ID</label>
+                                                <input type="text" class="form-control" required="" id="Student_Id" disabled="disabled">
                                             </div>
                                             <div class="form-group">
                                                 <label>Student Name</label>
-                                                <input type="text" class="form-control" required="" id="Student_Name" disabled="disabled" >
+                                                <input type="text" class="form-control" required="" id="Student_Name" disabled="disabled">
                                             </div>
                                             <div class="form-group">
                                                 <label>Class Name</label>
-                                                <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes"></select>
+                                                <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
                                             </div>
 
                                             <div class="form-group">
                                                 <label>Section Name</label>
-                                                <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections"></select>
+                                                <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
                                             </div>
+
+                                            
+
                                         </div>
                                         <div class="modal-footer">
                                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
                                             <input type="submit" class="btn btn-info" value="Save">
                                             @*Added By Absar*@
-                                            <input type="hidden" id="Student_Id" name="Student_Id" />
-                                            <input type="hidden" id="Student_Name" name="Student_Name" />
+                                            <input type="hidden" name="StudentClass_Id" id="StudentClass_Id" />
+                                            <input type="hidden" name="Student_Id" id="Student_Id" />
+                                            <input type="hidden" name="Student_Name" id="Student_Name" />
                                         </div>
                                     </form>
                                 </div>
@@ -191,13 +202,14 @@
                         </div>
 
 
+
                         <!-- Delete Modal HTML -->
-                        <div id="deleteStudentModal" class="modal fade">
+                        <div id="deleteStudentClassModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="student" asp-action="deleteStudent">
+                                    <form method="post" asp-controller="student" asp-action="deleteStudentClass">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">Delete Student</h4>
+                                            <h4 class="modal-title">Delete Class Subject</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
@@ -209,7 +221,8 @@
                                             <input type="submit" class="btn btn-danger" value="Delete">
 
                                             @*//Added By Absar To Pass Parameter to action method*@
-                                            <input type="hidden" id="Student_Id" name="Student_Id" />
+                                            <input type="hidden" id="StudentClass_Id" name="StudentClass_Id" />
+                                            <input type="hidden" id="Students_Id" name="Student_Id" />
 
                                         </div>
                                     </form>
@@ -264,41 +277,44 @@
 <script>
     $(document).ready(function () {
 
-        $('#studentpage').DataTable();
+        //$('#editStudentClassModal').DataTable();
+
+        $('#StudentClassPage').dataTable({
+            /* Disable initial sort */
+            "aaSorting": []
+        });
+
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
 
-        //Get Student_Id for Delete Added By Absar
-        $('#studentpage #delete').on('click', function () {
-            var Student_Id = $(this).parent().find('.Student_Id').val();
-            $('#deleteStudentModal #Student_Id').val(Student_Id);
+        //Get StudentClass_Id for Delete Added By Absar
+        $('#StudentClassPage #delete').on('click', function () {
+            var StudentClass_Id = $(this).parent().find('.StudentClass_Id').val();
+            $('#deleteStudentClassModal #StudentClass_Id').val(StudentClass_Id);
         });
 
-        
-
-        //Get ClassSection_Id for Edit Added By Absar
-        $('#studentpage #assignClass').on('click', function () {
-            var id = $(this).parent().find('.Student_Id').val();
+        //Get StudentClass_Id for Edit Added By Absar
+        $('#StudentClassPage #edit').on('click', function () {
+            var id = $(this).parent().find('.StudentClass_Id').val();
             $.ajax({
 
                 type: 'GET',
-                url: '/admin/student/addStudentClass/' + id,
-                success: function (objStudent) {
-                     debugger;
+                url: '/admin/student/editStudentClass/' + id,
+                success: function (objStudentClass) {
+                   
                     // objClass = JSON.stringify(objClass);
 
                     //alert(objClass);
-                    $('#assignStudentClassModal #Student_Id').val(objStudent.student_Id);
-                    $('#assignStudentClassModal #Student_Name').val(objStudent.student_Name);
-                   // $('#assignStudentClassModal #Section_Id').val(objassignSection.section_Id);
+                    $('#editStudentClassModel #StudentClass_Id').val(objStudentClass.studentClass_Id);
+                    $('#editStudentClassModel #Class_Id').val(objStudentClass.class_Id);
+                    $('#editStudentClassModel #Section_Id').val(objStudentClass.section_Id);
+                    $('#editStudentClassModel #Student_Id').val(objStudentClass.student_Id);
+                    $('#editStudentClassModel #Student_Name').val(objStudentClass.student_Name);
 
                 }
             });
         });
-
-
-
 
         // Select/Deselect checkboxes
         var checkbox = $('table tbody input[type="checkbox"]');
@@ -320,3 +336,4 @@
         });
     });
 </script>
+
