--- a/LMS/Areas/Admin/Views/Student/StudentSubjectDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Student/StudentSubjectDetail.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<LMS.Domain.ViewModels.AssignSubjectViewModel>
+﻿@model IEnumerable<LMS.Domain.ViewModels.StudentClassViewModel>
 
 @{
-    ViewData["Title"] = "ClassSubjectDetail";
+    ViewData["Title"] = "StudentSubjectDetail";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -17,7 +17,7 @@
                         <span class="navbar-toggler-bar bar3"></span>
                     </button>
                 </div>
-                <a class="navbar-brand" href="#pablo">Class Subject Info</a>
+                <a class="navbar-brand" href="#pablo">Student Subject Info</a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -83,22 +83,33 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Class Subjects</h2>
+                                            <h2>Student Subjects</h2>
                                         </div>
                                         @*<div class="col-md-6 pull-right">
-                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
-                                            <a href="#deleteClassSubjectModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
-                                        </div>*@
+                                                <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                                <a href="#deleteClassSubjectModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                            </div>*@
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    @*<div class="col-md-1 px-1">
+                                    <div class="col-md-6 px-1">
+                                        <div class="form-group">
 
-                                    </div>*@
+                                            <h5 class="title" id="StudentId">Student Id : </h5>
+
+
+                                        </div>
+                                        <div class="form-group">
+                                            <h5 class="title" id="StudentName">Student Name : </h5>
+
+
+                                        </div>
+
+                                    </div>
+
 
                                     <div class="col-md-6 px-1">
-
                                         <div class="form-group">
 
                                             <h5 class="title" id="ClassId">Class Name : </h5>
@@ -110,6 +121,17 @@
 
 
                                         </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="row">
+                                    
+                                    <div class="col-md-6 px-1">
+
+                                        
+
                                         <div class="form-group">
                                             <h5 class="title">Subjects :</h5>
 
@@ -124,6 +146,8 @@
                                                     count++;
                                                     <br />
 
+                                                    <lable id="modelStudentId" hidden>@item.Student_Id</lable>
+                                                    <lable id="modelStudentName" hidden>@item.Student_Name</lable>
                                                     <lable id="modelClass" hidden>@item.Class_Name</lable>
                                                     <lable id="modelSection" hidden>@item.Section_Name</lable>
                                                 }
@@ -132,7 +156,7 @@
                                     </div>
                                 </div>
 
-                                
+
                                 <div class="clearfix">
 
                                 </div>
@@ -143,7 +167,7 @@
 
 
 
-                       
+
 
                     </div>
                 </div>
@@ -196,10 +220,18 @@
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
-        
+
+        var StudentId = $('#modelStudentId').text();
+        $('#StudentId').text('Student Id : ' + StudentId);
+
+
+        var StudentName = $('#modelStudentName').text();
+        $('#StudentName').text('Student Name : ' + StudentName);
+
 
         var ClassId = $('#modelClass').text();
         $('#ClassId').text('Class Name : ' + ClassId);
+
 
         var SectionId = $('#modelSection').text();
         $('#SectionId').text('Section Name : ' + SectionId);
