--- a/LMS/wwwroot/Dashboard/assets/css/classStyle.css
+++ b/LMS/wwwroot/Dashboard/assets/css/classStyle.css
@@ -218,7 +218,7 @@ table.table .avatar {
 	min-width: 100px;
 }	
 .modal form label {
-	font-weight: normal;
+	font-weight: 600;
 }
 /* fallback */
 /*@font-face {
