--- a/LMS/wwwroot/Dashboard/assets/jqueryDataTable/jquery.dataTables.css
+++ b/LMS/wwwroot/Dashboard/assets/jqueryDataTable/jquery.dataTables.css
@@ -42,12 +42,13 @@ table.dataTable thead .sorting_desc_disabled {
   background-repeat: no-repeat;
   background-position: center right;
 }
-table.dataTable thead .sorting {
-  background-image: url("../images/sort_both.png");
-}
-table.dataTable thead .sorting_asc {
-  background-image: url("../images/sort_asc.png");
-}
+    table.dataTable thead .sorting {
+        
+        background-image: url('../img/sort_both.png');
+    }
+    table.dataTable thead .sorting_asc {
+        background-image: url("../img/sort_asc.png");
+    }
 table.dataTable thead .sorting_desc {
   background-image: url("../images/sort_desc.png");
 }
