--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -97,6 +97,7 @@
                         <ul>
                             <li><a asp-area="admin" asp-controller="teacher" asp-action="addTeacher">Add Teacher</a></li>
                             <li><a asp-area="admin" asp-controller="teacher" asp-action="index">Teachers List</a></li>
+                            <li><a asp-area="admin" asp-controller="teacher" asp-action="teacherSubjectDetail">Teachers Subject</a></li>
 
 
                         </ul>
