--- a/LMS/Areas/Admin/Views/Student/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Student/Index.cshtml
@@ -154,7 +154,7 @@
                         <div id="assignStudentClassModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="student" asp-action="studentClass">
+                                    <form method="post" asp-controller="student" asp-action="addStudentClass">
                                         <div class="modal-header">
                                             <h4 class="modal-title">Add Student Class</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
