--- a/LMS/wwwroot/Dashboard/assets/css/classStyle.css
+++ b/LMS/wwwroot/Dashboard/assets/css/classStyle.css
@@ -204,11 +204,12 @@ table.table .avatar {
 }
 .modal .modal-title {
     display: inline-block;
+	font-weight: 600;
 }
 .modal .form-control {
-	border-radius: 2px;
+	border-radius: 30px;
 	box-shadow: none;
-	border-color: #dddddd;
+	border-color: #174876;
 }
 .modal textarea.form-control {
 	resize: vertical;
