--- a/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
@@ -162,9 +162,13 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-md-4 pl-1">
-                                                            <div class="form-group">
+                                                            @*<div class="form-group">
                                                                 <label>Date Of Birth</label>
                                                                 <input asp-for="Student_DOB" type="text" class="form-control" placeholder="DOB">
+                                                            </div>*@
+                                                            <div class="form-group">
+                                                                <label>Date Of Birth</label>
+                                                                <input asp-for="Student_DOB" class="form-control" type="datetime-local" id="DOB" name="birthdaytime">
                                                             </div>
                                                         </div>
 
