--- a/LMS/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -18,7 +22,11 @@
                         <span class="navbar-toggler-bar bar3"></span>
                     </button>
                 </div>
-                <a class="navbar-brand" asp-area="admin" asp-controller="dashboard" asp-action="index">Dashboard</a>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <a class="navbar-brand" asp-area="admin" asp-controller="dashboard" asp-action="index">Dashboard - Hello @UserManager.GetUserName(User)!</a>
+                }
+
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar navbar-kebab"></span>
