--- a/LMS/Areas/Admin/Views/Student/StudentClassDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Student/StudentClassDetail.cshtml
@@ -17,7 +17,7 @@
                         <span class="navbar-toggler-bar bar3"></span>
                     </button>
                 </div>
-                <a class="navbar-brand" href="#pablo">Class Subject Info</a>
+                <a class="navbar-brand" href="#pablo">Student Class Info</a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -83,7 +83,7 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Assign Subject To Particular <b>Class & Section</b></h2>
+                                            <h2>Student Class Details <b>With Subjects</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
                                             <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
