--- a/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
@@ -83,16 +83,16 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Assign Subject To Particular <b>Teacher</b></h2>
+                                            <h2>Teacher Subject Details <b>With Classes</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
-                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
-                                            <a href="#deleteStudentClassModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                            @*<a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                                <a href="#deleteTeacherSubjectModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>*@
                                         </div>
                                     </div>
                                 </div>
 
-                                <table id="StudentClassPage" class="display" style="width:100%">
+                                <table id="TeacherSubjectPage" class="display" style="width:100%">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
@@ -125,11 +125,11 @@
 
                                                 </td>
                                                 <td>
-                                                    <a href="#editStudentClassModel" class="edit" id="edit" data-toggle="modal">
+                                                    <a href="#editTeacherSubjectModel" class="edit" id="edit" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
                                                     </a>
 
-                                                    <a href="#deleteStudentClassModal" class="delete" id="delete" data-toggle="modal">
+                                                    <a href="#deleteTeacherSubjectModal" class="delete" id="delete" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
                                                     </a>
 
@@ -155,28 +155,25 @@
 
 
 
-                        <!-- Edit Modal HTML -->
-                        @*<div id="editStudentClassModel" class="modal fade">
+                        @* Edit Modal HTML*@
+                        <div id="editTeacherSubjectModel" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="student" asp-action="editStudentClass">
+                                    <form method="post" asp-controller="teacher" asp-action="editTeacherSubject">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">Edit Student Class</h4>
+                                            <h4 class="modal-title">Edit Teacher Subject</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
                                             <div class="form-group">
-                                                <label>ID</label>
-                                                <input type="text" class="form-control" required="" id="StudentClass_Id" disabled="disabled">
+                                                <label>Teacher ID</label>
+                                                <input type="text" class="form-control" required="" id="Teacher_Id" disabled="disabled">
                                             </div>
                                             <div class="form-group">
-                                                <label>Student ID</label>
-                                                <input type="text" class="form-control" required="" id="Student_Id" disabled="disabled">
+                                                <label>Teacher Name</label>
+                                                <input type="text" class="form-control" required="" id="Teacher_Name" disabled="disabled">
                                             </div>
-                                            <div class="form-group">
-                                                <label>Student Name</label>
-                                                <input type="text" class="form-control" required="" id="Student_Name" disabled="disabled">
-                                            </div>
+
                                             <div class="form-group">
                                                 <label>Class Name</label>
                                                 <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
@@ -187,31 +184,36 @@
                                                 <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
                                             </div>
 
+                                            <div class="form-group">
+                                                <label>Subject Name</label>
+                                                <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subjects, "Subject_Id", "Subject_Name"))"></select>
+                                            </div>
+
 
 
                                         </div>
                                         <div class="modal-footer">
                                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
                                             <input type="submit" class="btn btn-info" value="Save">
-                                            
-                                            <input type="hidden" name="StudentClass_Id" id="StudentClass_Id" />
-                                            <input type="hidden" name="Student_Id" id="Student_Id" />
-                                            <input type="hidden" name="Student_Name" id="Student_Name" />
+
+                                            <input type="hidden" name="TeacherSubject_Id" id="TeacherSubject_Id" />
+                                            <input type="hidden" name="Teacher_Id" id="Teacher_Id" />
+
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                        </div>*@
+                        </div>
 
 
 
                         <!-- Delete Modal HTML -->
-                        <div id="deleteStudentClassModal" class="modal fade">
+                        <div id="deleteTeacherSubjectModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="student" asp-action="deleteStudentClass">
+                                    <form method="post" asp-controller="teacher" asp-action="deleteTeacherSubject">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">Delete Class Subject</h4>
+                                            <h4 class="modal-title">Delete Teacher Subject</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
@@ -223,8 +225,8 @@
                                             <input type="submit" class="btn btn-danger" value="Delete">
 
                                             @*//Added By Absar To Pass Parameter to action method*@
-                                            <input type="hidden" id="StudentClass_Id" name="StudentClass_Id" />
-                                            <input type="hidden" id="Students_Id" name="Student_Id" />
+                                            <input type="hidden" id="TeacherSubject_Id" name="TeacherSubject_Id" />
+
 
                                         </div>
                                     </form>
@@ -275,66 +277,69 @@
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
+<link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
+<script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 @*<script src="~/Dashboard/assets/js/navigation.js"></script>*@
 <script>
     $(document).ready(function () {
 
-        //$('#editStudentClassModal').DataTable();
+        toastr.options = {
+            "positionClass": "toast-top-center",
+            "showDuration": "5000",
+            "hideDuration": "5000",
+            "timeOut": "5000",
+            "extendedTimeOut": "5000",
+        };
 
-        $('#StudentClassPage').dataTable({
-            /* Disable initial sort */
-            "aaSorting": []
-        });
+
+
+        var message = '@TempData["Message"]';
+
+        if (message == "Success") {
+            //console.log(message);
+            toastr.success('Record Added Successfully');
+        }
+        else if (message == "Failed")  {
+            toastr.error('Error Occured Whill Adding Record');
+        }
 
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
 
-        //Get StudentClass_Id for Delete Added By Absar
-        $('#StudentClassPage #delete').on('click', function () {
-            var StudentClass_Id = $(this).parent().find('.StudentClass_Id').val();
-            $('#deleteStudentClassModal #StudentClass_Id').val(StudentClass_Id);
+        //Get TeacherSubject_Id for Delete Added By Absar
+        $('#TeacherSubjectPage #delete').on('click', function () {
+            var TeacherSubject_Id = $(this).parent().find('.TeacherSubject_Id').val();
+            $('#deleteTeacherSubjectModal #TeacherSubject_Id').val(TeacherSubject_Id);
         });
 
-        //Get StudentClass_Id for Edit Added By Absar
-        $('#StudentClassPage #edit').on('click', function () {
-            var id = $(this).parent().find('.StudentClass_Id').val();
+        //Get TeacherSubject_Id for Edit Added By Absar
+        $('#TeacherSubjectPage #edit').on('click', function () {
+            var id = $(this).parent().find('.TeacherSubject_Id').val();
             $.ajax({
 
                 type: 'GET',
-                url: '/admin/student/editStudentClass/' + id,
-                success: function (objStudentClass) {
+                url: '/admin/teacher/editTeacherSubject/' + id,
+                success: function (objTeacherSubject) {
 
-                    // objClass = JSON.stringify(objClass);
 
-                    //alert(objClass);
-                    $('#editStudentClassModel #StudentClass_Id').val(objStudentClass.studentClass_Id);
-                    $('#editStudentClassModel #Class_Id').val(objStudentClass.class_Id);
-                    $('#editStudentClassModel #Section_Id').val(objStudentClass.section_Id);
-                    $('#editStudentClassModel #Student_Id').val(objStudentClass.student_Id);
-                    $('#editStudentClassModel #Student_Name').val(objStudentClass.student_Name);
+                    $('#editTeacherSubjectModel #TeacherSubject_Id').val(objTeacherSubject.teacherSubject_Id);
+                    $('#editTeacherSubjectModel #Teacher_Id').val(objTeacherSubject.teacher_Id);
+                    $('#editTeacherSubjectModel #Teacher_Name').val(objTeacherSubject.teacher_Name);
+                    $('#editTeacherSubjectModel #Class_Id').val(objTeacherSubject.class_Id);
+                    $('#editTeacherSubjectModel #Section_Id').val(objTeacherSubject.section_Id);
+                    $('#editTeacherSubjectModel #Subject_Id').val(objTeacherSubject.subject_Id);
+
 
                 }
             });
         });
 
-        // Select/Deselect checkboxes
-        var checkbox = $('table tbody input[type="checkbox"]');
-        $("#selectAll").click(function () {
-            if (this.checked) {
-                checkbox.each(function () {
-                    this.checked = true;
-                });
-            } else {
-                checkbox.each(function () {
-                    this.checked = false;
-                });
-            }
+
+        $('#TeacherSubjectPage').dataTable({
+            /* Disable initial sort */
+            "aaSorting": []
         });
-        checkbox.click(function () {
-            if (!this.checked) {
-                $("#selectAll").prop("checked", false);
-            }
-        });
+
     });
 </script>
