--- a/LMS/Views/Login/Index.cshtml
+++ b/LMS/Views/Login/Index.cshtml
@@ -35,8 +35,8 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input asp-for="Email" required class="form-control" placeholder="username" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
+                            <input asp-for="UserName" required class="form-control" placeholder="username" />
+                            <span asp-validation-for="UserName" class="text-danger"></span>
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
