Changes In Admin Panel

--- a/LMS/wwwroot/Dashboard/assets/css/all.css
+++ b/LMS/wwwroot/Dashboard/assets/css/all.css
@@ -4977,6 +4977,10 @@
     content: "\f63f"
 }
 
+.fa-refresh:before {
+	content:"\f021"
+}
+
 .sr-only {
     border: 0;
     clip: rect(0, 0, 0, 0);
