--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -7,79 +7,16 @@
 }
 
 <div class="dashboard" id="dashboard">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
-        <div class="container-fluid">
-            <div class="navbar-wrapper">
-                <div class="navbar-toggle">
-                    <button type="button" class="navbar-toggler">
-                        <span class="navbar-toggler-bar bar1"></span>
-                        <span class="navbar-toggler-bar bar2"></span>
-                        <span class="navbar-toggler-bar bar3"></span>
-                    </button>
-                </div>
-                <a class="navbar-brand" href="#pablo">Users Info</a>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-bar navbar-kebab"></span>
-                <span class="navbar-toggler-bar navbar-kebab"></span>
-                <span class="navbar-toggler-bar navbar-kebab"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navigation">
-                <form>
-                    <div class="input-group no-border">
-                        <input type="text" value="" class="form-control" placeholder="Search...">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <i class="now-ui-icons ui-1_zoom-bold"></i>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pablo">
-                            <i class="now-ui-icons media-2_sound-wave"></i>
-                            <p>
-                                <span class="d-lg-none d-md-block">Stats</span>
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="now-ui-icons location_world"></i>
-                            <p>
-                                <span class="d-lg-none d-md-block">Some Actions</span>
-                            </p>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pablo">
-                            <i class="now-ui-icons users_single-02"></i>
-                            <p>
-                                <span class="d-lg-none d-md-block">Account</span>
-                            </p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+   
     <div class="panel-header panel-header-sm">
     </div>
     <div class="content">
-        @if (ViewBag.Error != null)
-        {
-            <script type="text/javascript">
-          alert( "@(ViewBag.Error)");
-            </script>
-        }
+        @*@if (ViewBag.Error != null)
+            {
+                <script type="text/javascript">
+              alert( "@(ViewBag.Error)");
+                </script>
+            }*@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
@@ -94,18 +31,18 @@
                                         </div>
                                         <div class="col-md-6 pull-right">
                                             <a href="#addUserModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
-                                            <a href="#deleteUserModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                            
                                         </div>
                                     </div>
                                 </div>
 
-                                <table id="userpage" class="display" style="width: 650px;">
+                                <table id="userpage" class="display" style="width: 100%;">
                                     <thead>
                                         <tr>
                                             <th>Id</th>
                                             <th>User Name</th>
                                             <th>User Email</th>
-                                            <th>User Password</th>
+                                            @*<th>User Password</th>*@
                                             <th>User Role</th>
                                             <th>Action</th>
                                         </tr>
@@ -117,7 +54,7 @@
                                                 <td>@item.UserId</td>
                                                 <td>@item.UserName</td>
                                                 <td>@item.UserEmail</td>
-                                                <td>@item.UserPassword</td>
+                                                @*<td>@item.UserPassword</td>*@
                                                 <td>@item.UserRole</td>
                                                 <td>
                                                     <a href="#editUserModal" class="edit" id="edit" data-toggle="modal">
@@ -127,6 +64,18 @@
                                                     <a href="#deleteUserModal" class="delete" id="delete" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
                                                     </a>
+
+
+                                                    <a asp-area="admin" asp-controller="user" asp-action="resetPassword" asp-route-id="@item.UserId" class="ResetPassword" id="ResetPassword">
+                                                        <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:20px;"></i>
+                                                    </a>
+
+                                                    @*<a asp-area="admin" asp-controller="user" asp-action="resetPassword" asp-route-id="@item.UserId" class="ResetPassword" id="ResetPassword">
+                                                            <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:20px;"></i>
+                                                        </a>*@
+
+
+
 
                                                     @*Added BY Absar To get parentid*@
                                                     <input type="hidden" class="User_Id" value="@item.UserId" />
@@ -152,9 +101,9 @@
                                         </div>
                                         <div class="modal-body">
                                             @*<div class="form-group">
-                                                <label>Class ID</label>
-                                                <input type="text" class="form-control" required="" name="User_Id">
-                                            </div>*@
+                                                    <label>Class ID</label>
+                                                    <input type="text" class="form-control" required="" name="User_Id">
+                                                </div>*@
                                             <div class="form-group">
                                                 <label>User Name</label>
                                                 <input type="text" class="form-control" required="" name="UserName">
@@ -304,6 +253,8 @@
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
+<link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
+<script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 @*<script src="~/Dashboard/assets/js/navigation.js"></script>*@
 <script type="text/javascript">
 
@@ -311,7 +262,27 @@
 <script>
     $(document).ready(function () {
 
+        toastr.options = {
+            "positionClass": "toast-top-center",
+            "showDuration": "5000",
+            "hideDuration": "5000",
+            "timeOut": "5000",
+            "extendedTimeOut": "5000",
+        };
+
+        var messageError = '@(ViewBag.Error)';
+        var messageSuccess = '@(ViewBag.Success)';
         
+
+        if (messageSuccess.length > 0) {
+            //console.log(message);
+            toastr.success(messageSuccess);
+        }
+        else if (messageError > 0)  {
+            toastr.error(messageError);
+        }
+
+
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
@@ -330,7 +301,7 @@
                 type: 'GET',
                 url: '/admin/user/editUser/' + id,
                 success: function (objUserWithRole) {
-                   
+
                     $('#editUserModal #User_Id').val(objUserWithRole[0].userId);
                     $('#editUserModal #User_Name').val(objUserWithRole[0].userName);
                     $('#editUserModal #User_Email').val(objUserWithRole[0].userEmail);
@@ -344,19 +315,19 @@
 
 
         $('#userpage').DataTable({
-            responsive: true,
-            autoWidth: false,
-            "columnDefs": [
-                { "width": "15%", "targets": 0 },
-                { "width": "15%", "targets": 1 },
-                { "width": "15%", "targets": 2 },
-                { "width": "25%", "targets": 3 },
-                { "width": "15%", "targets": 4 },
-                { "width": "15%", "targets": 5 },
-                
-            ],
+            //responsive: true,
+            //autoWidth: false,
+            //"columnDefs": [
+            //    { "width": "15%", "targets": 0 },
+            //    { "width": "15%", "targets": 1 },
+            //    { "width": "15%", "targets": 2 },
+            //    { "width": "25%", "targets": 3 },
+            //    { "width": "15%", "targets": 4 },
+            //    { "width": "15%", "targets": 5 },
+
+            //],
         });
 
-        
+
     });
 </script>
