--- a/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
@@ -1,141 +1,81 @@
 ﻿@model LMS.Domain.ViewModels.LectureViewModel
 @{
     ViewData["Title"] = "AddLecture";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
-    <div class="container-fluid">
-        <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-                <button type="button" class="navbar-toggler">
-                    <span class="navbar-toggler-bar bar1"></span>
-                    <span class="navbar-toggler-bar bar2"></span>
-                    <span class="navbar-toggler-bar bar3"></span>
-                </button>
-            </div>
-            <a class="navbar-brand" href="#pablo"></a>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
-                <div class="input-group no-border">
-                    <input type="text" value="" class="form-control" placeholder="Search...">
-                    <div class="input-group-append">
-                        <div class="input-group-text">
-                            <i class="now-ui-icons ui-1_zoom-bold"></i>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#pablo">
-                        <i class="now-ui-icons media-2_sound-wave"></i>
-                        <p>
-                            <span class="d-lg-none d-md-block">Stats</span>
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="now-ui-icons location_world"></i>
-                        <p>
-                            <span class="d-lg-none d-md-block">Some Actions</span>
-                        </p>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#pablo">
-                        <i class="now-ui-icons users_single-02"></i>
-                        <p>
-                            <span class="d-lg-none d-md-block">Account</span>
-                        </p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- End Navbar -->
-<div class="panel-header panel-header-sm">
-</div>
-<div class="content">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <div class="card">
-                <div class="card-header">
-                    <h5 class="title">Lecture Add</h5>
-                </div>
-                <div class="card-body">
-                    <form enctype="multipart/form-data" asp-controller="Lecture" asp-action="AddLecture">
-                        <div class="row">
-                            <div class="col-md-5 pr-1">
-                                <div class="form-group">
-                                    <label>Class Name</label>
-                                    <select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>
-                                </div>
-                            </div>
-                            <div class="col-md-5 pr-1">
-                                <div class="form-group">
-                                    <label>Section Name</label>
-                                    <select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SectionList, "Section_Id", "Section_Name"))"></select>
-                                </div>
-                            </div>
-                            <div class="col-md-5 pr-1">
-                                <div class="form-group">
-                                    <label>Subject Name</label>
-                                    <select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SubjectList, "Subject_Id", "Subject_Name"))"></select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 pr-1">
-                                <div class="form-group">
-                                    <label>Date</label>
-                                    <input asp-for="LecturePost_Date" class="form-control">
-                                    @*<input class="form-control" type="datetime-local" id="birthdaytime" name="birthdaytime">*@
-                                </div>
-                            </div>
-                            <div class="col-md-6 pl-1">
-                                <div class="form-group">
-                                    <label>Lecture Name</label>
-                                    <input asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lecture Name">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>Details</label>
-                                    <input asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lecture Details">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4 pr-1">
-                                <div class="form-group">
-                                    <label>File Upload</label>
-                                    <input asp-for="Lecture_File" class="form-control">
-                                </div>
-                            </div>
 
-                        </div>
-                        <button type="submit" class="btn btn-primary">Add</button>
-                    </form>
+<div class="Dashboard" id="Dashboard">
+    
+    <div class="panel-header panel-header-sm">
+    </div>
+    <div class="content">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="title">Lecture Add</h5>
+                    </div>
+                    <div class="card-body">
+                        <form enctype="multipart/form-data" asp-controller="Lecture" asp-action="AddLecture">
+                            <div class="row">
+                                <div class="col-md-5 pr-1">
+                                    <div class="form-group">
+                                        <label>Class Name</label>
+                                        <select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>
+                                    </div>
+                                </div>
+                                <div class="col-md-5 pr-1">
+                                    <div class="form-group">
+                                        <label>Section Name</label>
+                                        <select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SectionList, "Section_Id", "Section_Name"))"></select>
+                                    </div>
+                                </div>
+                                <div class="col-md-5 pr-1">
+                                    <div class="form-group">
+                                        <label>Subject Name</label>
+                                        <select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SubjectList, "Subject_Id", "Subject_Name"))"></select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 pr-1">
+                                    <div class="form-group">
+                                        <label>Date</label>
+                                        <input asp-for="LecturePost_Date" class="form-control">
+                                        @*<input class="form-control" type="datetime-local" id="birthdaytime" name="birthdaytime">*@
+                                    </div>
+                                </div>
+                                <div class="col-md-6 pl-1">
+                                    <div class="form-group">
+                                        <label>Lecture Name</label>
+                                        <input asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lecture Name">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Details</label>
+                                        <input asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lecture Details">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4 pr-1">
+                                    <div class="form-group">
+                                        <label>File Upload</label>
+                                        <input asp-for="Lecture_File" class="form-control">
+                                    </div>
+                                </div>
+
+                            </div>
+                            <button type="submit" class="btn btn-primary">Add</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+</div>
